syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AvatarInfo.proto";
import "AvatarTeam.proto";
import "AvatarRenameInfo.proto";


message AvatarDataNotify {
	uint64 choose_avatar_guid = 5;
	uint32 cur_avatar_team_id = 12;
	repeated uint64 temp_avatar_guid_list = 7;
	repeated uint32 owned_costume_list = 11;
	repeated uint32 owned_flycloak_list = 1;
	repeated uint32 owned_trace_effect_list = 10;
	repeated uint32 backup_avatar_team_order_list = 13;
	repeated AvatarRenameInfo avatar_rename_list = 15;
	repeated AvatarInfo avatar_list = 8;
	map<uint32, AvatarTeam> avatar_team_map = 14;
}