syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarDelNotify {
	repeated uint64 avatar_guid_list = 13;
}