syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "ParentQuestRandomInfo.proto";
import "InferencePageInfo.proto";
import "ChildQuest.proto";


message ParentQuest {
	uint64 video_key = 4;
	bool is_random = 9;
	bool is_finished = 15;
	uint32 parent_quest_state = 8;
	uint32 quest_var_seq = 14;
	uint32 accept_time = 2;
	uint32 parent_quest_id = 12;
	ParentQuestRandomInfo random_info = 10;
	repeated int32 quest_var = 13;
	repeated ChildQuest child_quest_list = 1;
	repeated InferencePageInfo inference_page_list = 11;
	map<uint32, uint32> time_var_map = 5;
}