syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "PropValue.proto";


message PlayerDataNotify {
	uint64 server_time = 12;
	string nick_name = 5;
	bool is_first_login_today = 3;
	uint32 region_id = 8;
	map<uint32, PropValue> prop_map = 14;
}