syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Item.proto";
import "StoreType.proto";


message PlayerStoreNotify {
	uint32 weight_limit = 1;
	StoreType store_type = 12;
	repeated Item item_list = 8;
}