syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message QuestUpdateQuestVarRsp {
	int32 retcode = 11;
	uint32 parent_quest_var_seq = 3;
	uint32 parent_quest_id = 5;
	uint32 quest_id = 9;
}